--- a/pixi.toml
+++ b/pixi.toml
@@ -1,4 +1,4 @@
-[project]
+[workspace]
 name = "garmin-ai-coach"
 version = "2.0.0"
 description = "CLI tool for Garmin data analysis with AI-powered insights"
